# wm4esp

./: Cargo.toml  build.rs  cfg.toml.example  sdkconfig.defaults
.cargo/: config.toml
src/: common.rs  config.rs  display.rs  error.rs  main.rs  weather.rs
src/app/: app.rs  mod.rs  quotes.rs  weather.rs  weather_icons.rs
src/display/: device.rs  display.rs  font_16.rs  font_32.rs  mod.rs  screen.rs  ssd1683.rs
src/network/: completed.html  http.rs  index.html  report.html  wifi.rs
src/peripheral/: dht20.rs  mod.rs  ssd1683.rs
src/resource/: font_64.rs  mod.rs  quotes.rs
src/sensor/: dht20.rs
src/wifi/: http_client.rs  mod.rs  sntp.rs  wifi.rs
