[package]
name = "wm4esp"
version = "0.1.0"
authors = ["Feng Ren <alogfans@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-svc = "0.24.0"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = { version = "0.40.1"}
esp-idf-svc = { version = "0.45.0", features = ["experimental", "alloc"]}
serde_json = "1.0.95"
time = { version = "0.3.20", features = ["local-offset", "formatting"]}
time-macros = "0.2.8"
anyhow = "1.0.70"
toml-cfg = "0.1.3"
flate2 = "1.0.25"
rand = "0.8.5"
u8g2-fonts = "0.2.0"
embedded-graphics = "0.7.1"

[build-dependencies]
embuild = "0.31.1"
toml-cfg = "=0.1.3"
